# rosterium

./: LICENCE  README.markdown  rosterium.cabal  stack.yaml
examples/MuppetShow/: Cast.hs  Episode.hs
lib/Roster/: Setup.hs  Types.hs
lib/Rosterium/: Allocate.hs  Allocatus.hs  Dealer.hs  Setup.hs  Types.hs
lib/Text/: Render.hs
src/: GenerateRoster.hs
tests/: CheckProgram.hs  MuppetShow.hs  Snippet.hs
