cabal-version:       >= 1.10
name:                rosterium
version:             0.4.2
synopsis:            Select people according to a skill and demand matrix
license:             BSD3
license-file:        LICENCE
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2016 Operational Dynamics Consulting Pty Ltd, and Others
category:            Text
tested-with:         GHC == 7.10

build-type:          Simple

library
  default-language:  Haskell2010

  build-depends:     base,
                     bytestring,
                     text,
                     containers,
                     mwc-random,
                     vector,
                     mtl,
                     hourglass

  hs-source-dirs:    lib

  exposed-modules:   Rosterium.Allocatus
                     Rosterium.Dealer
                     Rosterium.Types
                     Rosterium.Setup
                     Text.Render

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -prof -fprof-auto-top


test-suite           check
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0

  build-depends:     base,
                     bytestring,
                     transformers,
                     mtl,
                     HUnit,
                     hspec,
                     text,
                     rosterium

  hs-source-dirs:    tests
  main-is:           CheckProgram.hs
                      
executable           snippet
  default-language:  Haskell2010

  build-depends:     base,
                     bytestring,
                     text,
                     hourglass,
                     mwc-random,
                     rosterium

  ghc-options:       -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -fno-warn-type-defaults
                     -fno-warn-unused-imports

  hs-source-dirs:    tests
  main-is:           Snippet.hs
                      
-- vim: set tabstop=21 expandtab:
